# proxmox-discord-notifier

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: docker.yml
proxmox2discord/: cli.py  config.py  endpoints.py  log_cleanup.py  main.py
proxmox2discord/schemas/: notify.py
proxmox2discord/templates/: log_viewer.html
proxmox_discord_notifier/: cli.py  config.py  discord.py  endpoints.py  log_cleanup.py  main.py  validation.py
proxmox_discord_notifier/schemas/: notify.py  responses.py
proxmox_discord_notifier/templates/: log_viewer.html
tests/: conftest.py  test_config.py  test_discord.py  test_endpoints.py  test_log_cleanup.py  test_notify_schema.py
