[project]
name = "proxmox-discord-notifier"
version = "0.1.0"
description = "Proxmox Discord notifier service"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Skulldorom", email = "51134009+Skulldorom@users.noreply.github.com" }
]
maintainers = [
    { name = "Skulldorom", email = "51134009+Skulldorom@users.noreply.github.com" }
]
dependencies = [
    "fastapi[standard]",
    "httpx==0.28.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "typer==0.27.0",
]

[project.urls]
Homepage = "https://github.com/Skulldorom/proxmox-discord-notifier"
Repository = "https://github.com/Skulldorom/proxmox-discord-notifier"
Issues = "https://github.com/Skulldorom/proxmox-discord-notifier/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.scripts]
proxmox-discord-notifier = "proxmox_discord_notifier.cli:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["N805"]  # false positive on pydantic field_validators

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
